--- a/plugins/org.prototypejs.prototype.1.6/about.properties
+++ b/plugins/org.prototypejs.prototype.1.6/about.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2006 Aptana, Inc. and others.
+# Copyright (c) 2005-2010 Aptana, Inc. and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -16,6 +16,6 @@ blurb=Aptana Support for Prototype\n\
 \n\
 Version: {featureVersion}\n\
 \n\
-(c) Copyright Aptana, Inc. 2007. Portions copyright Adobe, 2007.  All rights reserved.\n\
+(c) Copyright Aptana, Inc. 2010. Portions copyright Adobe, 2007.  All rights reserved.\n\
 Visit http://www.aptana.com/
 
