--- a/deploy/config/s3.yml
+++ b/deploy/config/s3.yml
@@ -1,3 +1,3 @@
 ---
-:access_key_id: "0ZA7YV7DBK6JCYAV77G2"
-:secret_access_key: "MHKoSpej/rtUezG0wfbb12ZIeqayOLFJ/C7n8O/L"
+:access_key_id: ""
+:secret_access_key: ""
