--- a/builders/com.aptana.ide.frameworks.build/build_local.properties
+++ b/builders/com.aptana.ide.frameworks.build/build_local.properties
@@ -27,10 +27,14 @@ scs.branch.name=master
 ide-core.p2.repo=file:/var/update-site/update/${scs.branch.name}/ide-core
 deploy.dir=/var/update-site/update/${scs.branch.name}/frameworks
 cleanAfter=true
+# Eclipse 3.5.2
+vanilla.eclipse=/opt/eclipse_3.5.2
+launcher.plugin=org.eclipse.equinox.launcher_1.0.201.R35x_v20090715
+builder.plugin=org.eclipse.pde.build_3.5.2.R35x_20100114
 # Eclipse 3.5
-vanilla.eclipse=/opt/eclipse_3.5
-launcher.plugin=org.eclipse.equinox.launcher_1.0.200.v20090520
-builder.plugin=org.eclipse.pde.build_3.5.0.v20090527-1800
+#vanilla.eclipse=/opt/eclipse_3.5
+#launcher.plugin=org.eclipse.equinox.launcher_1.0.200.v20090520
+#builder.plugin=org.eclipse.pde.build_3.5.0.v20090527-1800
 
 # git
 git.executable=/usr/bin/git
